  http://meta.wikimedia.org/wiki/Help:Watching_pages.
* FEATURE: AdminOnlyTopics replaced by Special:TopicsAdmin.
* FEATURE: Upgrade to Spring Framework 2.0.
* BUG: Refreshing after a form submission should no longer cause information
  to be resubmitted.
* FEATURE: "Go To" button in search should redirect to search results if
  no such topic exists.
* FEATURE: After editing a section, page will now reload to that section.
* FEATURE: Remove option to disable topic versioning.
* FEATURE: Updated Polish translations from Robert Matyja (dlpa).

0.4.1
=====

* BUG: Fix a setup bug that could incorrectly report that a database already
  exists.

0.4.0
=====

* FEATURE: Add support for Mediawiki templates (see 
  http://meta.wikimedia.org/wiki/Help:Templates).
* FEATURE: Replace file persistency mode with an embedded version of the
  HSQL database.
* FEATURE: Major update to the JAMWiki parser code.
* BUG: Properly escape ampersands from the parser to ensure XHTML output.
* FEATURE: Updated interwiki file from Axel Kramer (axelclk).
* FEATURE: Process interwiki prefixes case-insensitive.
* BUG: "Move" tab being incorrectly hidden on topic pages.
* BUG: Resolve issues that could cause upgrades to fail.
* FEATURE: Remove ability to automatically upgrade from JAMWiki versions
  prior to 0.2.0.
* FEATURE: Require admin user login to perform an upgrade.
* FEATURE: Remove Special:AllTopics; it was replaced by Special:Allpages
  in JAMWiki 0.3.0.
* FEATURE: Add JUnit test framework.
* FEATURE: Change default logo to submission from Oliver (okohll).
* FEATURE: Add additional support for the DB2/400 database.
* FEATURE: Updated MS SQL support from Robert Matyja (dlpa).
* BUG: Fix possible database transaction blocking during setup using
  suggestions from Robert Matyja (dlpa).
* FEATURE: Updated Hungarian translations from Daniel Tar (bDaneE).
* FEATURE: Updated Polish translations from Robert Matyja (dlpa).
* FEATURE: Updated German translations from Axel Kramer (axelclk).
